# ad-health-checker

./: .gitignore  CHANGELOG.md  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: config-example.md  portfolio-maintenance.md  roadmap.md  testing-guide.md  usage-examples.md
src/ad_health_checker/: __init__.py  __main__.py  checker.py  cli.py
tests/: test_checker.py
