[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ad-health-checker"
version = "0.1.0"
description = "Windows Active Directory health monitoring and reporting tool"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ali Bidhendi", email = "alibidhendi2000@gmail.com" }]
requires-python = ">=3.11"
keywords = ["active-directory", "windows", "networking", "security", "sysadmin"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Networking :: Monitoring",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=5", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
ad-health = "ad_health_checker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
packages = ["ad_health_checker"]
ignore_missing_imports = true
